Added 'nowrap' for white-space to 'laststep' label
Adding 'white-space: nowrap;' to '.step-progressbar-steplabel.step-progressbar-laststep' prevents label with whitespace to break and overlay with the progressbar.

--- a/src/jquery.stepProgressBar.css
+++ b/src/jquery.stepProgressBar.css
@@ -78,6 +78,7 @@
 }
 .step-progressbar-steplabel.step-progressbar-laststep {
   transform: translate(-100%, 0);
+  white-space: nowrap;
 }
 .step-progressbar-steplabel:not(.step-progressbar-firststep):not(.step-progressbar-laststep) {
   transform: translate(-50%, 0);
